# Manikin_Software_Libraries

./: .gitignore  CMakeLists.txt  library.json
.github/workflows/: cmake.yml  cpplint.yml
docs/: hal.puml
modules/com_intranet/configs_inp/src/: hub_registers.cpp  hub_registers.hpp  inp_register.cpp  inp_register.hpp  protocol_references.hpp
modules/com_intranet/configs_inp/test/: CMakeLists.txt  configs_tests.cc
modules/com_intranet/docs/: INP_class_diagram.puml  INP_sequence.puml
modules/com_intranet/hub_inp/src/: hub_i2c.cpp  hub_i2c.hpp
modules/com_intranet/hub_inp/test/: CMakeLists.txt  inp_hub_test.cc
modules/com_intranet/master_inp/src/: master_i2c.cpp  master_i2c.hpp
modules/com_intranet/master_inp/test/: CMakeLists.txt  inp_master_test.cc
modules/hal_actuators/: CMakeLists.txt
modules/hal_actuators/act_motor/src/: motor.cpp  motor.hpp
modules/hal_exception/src/: hal_exception.cpp  hal_exception.hpp  hal_exception_config.hpp
modules/hal_gpio/src/: gpio.cpp  gpio.hpp
modules/hal_gpio/test/: CMakeLists.txt  hal_gpio_unit_test.cc
modules/hal_gpio/test/mocks/: sam.h
modules/hal_i2c/docs/: ClassDiagram.puml  ClassDiagramnobase.puml
modules/hal_i2c/src/: I2CBase.cpp  I2CBase.hpp  I2CHelper.hpp  I2CMasterBase.cpp  I2CMasterBase.hpp  I2CSlaveBase.cpp  I2CSlaveBase.hpp  I2C_Driver.cpp  I2C_Driver.hpp  i2c_configs.hpp  i2c_driver.cpp  i2c_driver.hpp
modules/hal_i2c/test/: CMakeLists.txt  i2c_wrapper_mock_test.cc
modules/hal_i2c/test/mocks/: i2c_helper.hpp  i2c_peripheral_mock.hpp
modules/hal_logger/src/: hal_log.cpp  hal_log.hpp  hal_log_base.hpp  hal_log_flash.cpp  hal_log_flash.hpp  hal_log_serial.cpp  hal_log_serial.hpp  hal_logtransport_base.hpp  hal_logtransport_flash.cpp  hal_logtransport_flash.hpp  hal_logtransport_serial.cpp  hal_logtransport_serial.hpp
modules/hal_logger/test/: CMakeLists.txt  hal_log_test.cc
modules/hal_pwm/hal_pwm_base/src/: pwm_base.cpp  pwm_base.hpp
modules/hal_pwm/hal_pwm_helper/src/: pwm_helper.hpp
modules/hal_pwm/hal_tc/src/: pwm_tc.cpp  pwm_tc.hpp
modules/hal_pwm/hal_tcc/src/: pwm_tcc.cpp  pwm_tcc.hpp
modules/hal_sensors/: CMakeLists.txt
modules/hal_sensors/I2C_sensor_abstraction/src/: I2C_abstraction.cpp  I2C_abstraction.hpp
modules/hal_sensors/I2C_sensor_abstraction/test/: CMakeLists.txt  I2C_abstraction_test.cc
modules/hal_sensors/I2C_sensor_abstraction/test/mocks/: sensor_abstraction_mock.hpp
modules/hal_sensors/i2c_sensor_driver/src/: I2C_sensor_driver.cpp  I2C_sensor_driver.hpp
modules/hal_sensors/i2c_sensor_driver/test/: CMakeLists.txt  (+1 more)
modules/hal_sensors/sensor_base/: CMakeLists.txt  sensor_base.hpp  sensor_helper.hpp
modules/hal_sensors/sensor_base/src/: I2CDriver.cpp  I2CDriver.hpp  sensor_base.hpp  sensor_helper.hpp
modules/hal_sensors/sensor_base/test/: CMakeLists.txt  Sensor_base_test.cc
modules/hal_sensors/sensor_base/tests/: CMakeLists.txt
modules/hal_sensors/sensor_compression/: CMakeLists.txt  VL6180X_REGISTERS.h  VL6180X_REGISTERS.hpp  sensor_compression.cpp  sensor_compression.hpp
modules/hal_sensors/sensor_compression/drivers/: VL6180x.cpp  VL6180x.hpp
modules/hal_sensors/sensor_compression/src/: sensor_compression.cpp  sensor_compression.hpp  vl6180x_registers.h  vl6180x_registers.hpp
modules/hal_sensors/sensor_compression/test/: CMakeLists.txt  compression_sensor_mock_test.cc
modules/hal_sensors/sensor_differentialpressure/: CMakeLists.txt  SDP810_REGISTERS.h  sensor_differentialpressure.cpp  sensor_differentialpressure.hpp
modules/hal_sensors/sensor_differentialpressure/drivers/: SDP810.cpp  SDP810.hpp
modules/hal_sensors/sensor_differentialpressure/src/: sdp810_registers.h  sdp810_registers.hpp  sensor_differentialpressure.cpp  sensor_differentialpressure.hpp
modules/hal_sensors/sensor_differentialpressure/test/: CMakeLists.txt  differentialpressure_sensor_mock_test.cc
modules/hal_sensors/sensor_fingerposition/: ADS7138_REGISTERS.h  CMakeLists.txt  sensor_fingerposition.cpp  sensor_fingerposition.hpp
modules/hal_sensors/sensor_fingerposition/test/: CMakeLists.txt  fingerposition_sensor_mock_test.cc
modules/hal_spi/src/: spi_base.hpp  spi_mainboard.cpp  spi_mainboard.hpp  spi_mainboard_registers.hpp
modules/hal_spi_slave/src/: spi_mainboard.cpp  spi_mainboard.hpp  spi_mainboard_registers.hpp
modules/i2c/: CMakeLists.txt  i2c_helper.cpp  i2c_helper.hpp
modules/i2c/docs/: ClassDiagram.puml
modules/i2c/src/: I2CAddr.hpp  I2CBase.hpp  i2c_helper.cpp  i2c_helper.hpp  i2c_interface.hpp  i2c_module_configs.hpp  i2c_wire_driver.cpp  i2c_wire_driver.hpp
modules/i2c/test/: CMakeLists.txt  i2c_wrapper_mock_test.cc
modules/i2c/test/mocks/: i2c_helper.hpp  i2c_helper_inp.hpp  i2c_helper_mock.hpp  i2c_peripheral_mock.hpp  old_i2c_peripheral_mock.hpp
modules/i2c/testing/: i2c_testclass.hpp
modules/i2c_inp/src/: i2c_helper_inp.cpp  i2c_helper_inp.hpp
modules/i2c_inp/test/: CMakeLists.txt  i2c_inp_mock_test.cc
modules/inp_configs/src/: HubRegisters.cpp  HubRegisters.hpp  Protocol_Constants.hpp  Register.cpp  Register.hpp  Register_addresses.hpp
modules/inp_configs/test/: CMakeLists.txt
modules/inp_hub_protocol/src/: hub_i2c.cpp  hub_i2c.hpp
modules/inp_hub_protocol/test/: CMakeLists.txt  inp_hub_test.cc
modules/inp_master_protocol/src/: master_i2c.cpp  master_i2c.hpp
modules/inp_master_protocol/test/: CMakeLists.txt  inp_master_test.cc
modules/inp_protocol/: CMakeLists.txt  hub_registers.h
modules/inp_protocol/src/: hub_registers.h  inp_hub.cpp  inp_hub.hpp  inp_master.cpp  inp_master.hpp
modules/inp_protocol/test/: CMakeLists.txt  inp_protocol_mock_test.cc
modules/ringbuffer/src/: ringbuffer.hpp
modules/ringbuffer/test/: CMakeLists.txt  ringbuffer_test.cc
modules/usb_service_protocol/src/: usb_service_protocol.cpp  usb_service_protocol.hpp
unit_tests/: CMakeLists.txt
unit_tests/compression_sensor_test/: CMakeLists.txt  i2c_helper.hpp
unit_tests/differentialpressure_sensor_test/: CMakeLists.txt
unit_tests/fingerposition_sensor_test/: CMakeLists.txt
unit_tests/i2c_tests/: CMakeLists.txt
(+15 files in other folders)
