macro(SUBDIRLIST result curdir)
  FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
  SET(dirlist "")
  FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        SET(dirlist ${dirlist} ${child})
    ENDIF()
  ENDFOREACH()
  SET(${result} ${dirlist})
endmacro()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/modules)

FOREACH(subdir ${SUBDIRS})
IF(EXISTS ${CMAKE_CURRENT_LIST_DIR}/modules/${subdir}/test)
  MESSAGE(STATUS "FOUND MODULE UNIT TEST:" ${subdir}/test)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/modules/${subdir}/test)
ELSE()
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/modules/${subdir})
ENDIF()
ENDFOREACH()

